added course list url in the profile page

--- a/src/main/webapp/course-editor/course-editor.template.client.html
+++ b/src/main/webapp/course-editor/course-editor.template.client.html
@@ -36,7 +36,8 @@
                 <a class="nav-link" href="#">Build</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link wbdv-page-tab" href="#">Pages <span class="sr-only">(current)</span></a>
+                <a class="nav-link wbdv-page-tab" href="#">Pages <span
+                        class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Theme</a>
@@ -64,18 +65,21 @@
             <ul class="nav nav-pills flex-column wbdv-module-list">
                 <li class="nav-item wbdv-module-item active">
                     <a class="nav-link wbdv-module-item-title" href="#">Module 1</a>
-                    <span class="btn pt-1 mr-3 float-right wbdv-module-item-delete-btn"><i class="fas fa-trash ml-2"></i></span>
+                    <span class="btn pt-1 mr-3 float-right wbdv-module-item-delete-btn"><i
+                            class="fas fa-trash ml-2"></i></span>
                 </li>
-                 <li class="nav-item wbdv-module-item">
+                <li class="nav-item wbdv-module-item">
                     <a class="nav-link wbdv-module-item-title" href="#">Module 2</a>
-                    <span class="btn pt-1 mr-3 float-right wbdv-module-item-delete-btn"><i class="fas fa-trash ml-2"></i></span>
+                    <span class="btn pt-1 mr-3 float-right wbdv-module-item-delete-btn"><i
+                            class="fas fa-trash ml-2"></i></span>
                 </li>
 
-                 <li class="nav-item wbdv-module-item">
+                <li class="nav-item wbdv-module-item">
                     <a class="nav-link wbdv-module-item-title" href="#">Module 3</a>
-                    <span class="btn pt-1 mr-3 float-right wbdv-module-item-delete-btn"><i class="fas fa-trash ml-2"></i></span>
+                    <span class="btn pt-1 mr-3 float-right wbdv-module-item-delete-btn"><i
+                            class="fas fa-trash ml-2"></i></span>
                 </li>
-                 <li class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link" href="#">
                         <div class="input-group">
                             <input type="text" class="form-control transparent-input">
@@ -159,7 +163,8 @@
             <div class="row">
                 <div class="col">
                     <div class="float-right">
-                        <button class="btn btn-success m-1"><i class="fas fa-plus-circle"></i></button>
+                        <button class="btn btn-success m-1"><i class="fas fa-plus-circle"></i>
+                        </button>
                     </div>
                 </div>
             </div>
