--- a/src/main/webapp/profile/profile.template.client.html
+++ b/src/main/webapp/profile/profile.template.client.html
@@ -67,6 +67,13 @@
                                 class="btn btn-success btn-block wbdv-button wbdv-logout">Update
                         </button>
                     </div>
+
+                </div>
+                <div class="form-group row">
+                    <div class="col">
+                        <a href="/course-list/course-list.template.client.html" class="float-right">Course
+                            List</a>
+                    </div>
                 </div>
             </div>
         </div>
