--- a/src/main/webapp/profile/profile.template.client.html
+++ b/src/main/webapp/profile/profile.template.client.html
@@ -58,6 +58,13 @@
                     </div>
                 </div>
                 <div class="form-group row">
+                    <label class="col-sm-3 col-form-label" for="password">Password</label>
+                    <div class="col-sm-9">
+                        <input type="password" class="form-control wbdv-field wbdv-password"
+                               id="password" placeholder="Enter Password">
+                    </div>
+                </div>
+                <div class="form-group row">
                     <div class=" col-sm-4 offset-sm-3">
                         <a href="/"
                            class="btn btn-outline-danger btn-block wbdv-button wbdv-update">Logout</a>
