--- a/src/main/webapp/course-editor/course-editor.template.client.html
+++ b/src/main/webapp/course-editor/course-editor.template.client.html
@@ -14,15 +14,13 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-    <div>
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item mr-2">
-                <button class="btn btn-outline-light  ">
-                    <i class="fas fa-times text-light wbdv-course-editor wbdv-close "></i>
-                </button>
-            </li>
-        </ul>
-    </div>
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item mr-2">
+            <a href="/course-list/course-list.template.client.html" class="btn btn-outline-light  ">
+                <i class="fas fa-times text-light wbdv-course-editor wbdv-close "></i>
+            </a>
+        </li>
+    </ul>
     <a class="navbar-brand wbdv-course-title" href="#">CS 5610 - Web Dev</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
