fixed url in course-list

--- a/src/main/webapp/course-list/course-list.template.client.html
+++ b/src/main/webapp/course-list/course-list.template.client.html
@@ -85,7 +85,7 @@
                         <th scope="row" class="align-middle wbdv-row wbdv-icon"><i
                                 class="fas fa-book"></i></th>
                         <td class="align-middle wbdv-row wbdv-title"><a
-                                href="http://localhost:8080/course-editor/course-editor.template.client.html">CS
+                                href="/course-editor/course-editor.template.client.html">CS
                             5610 - Web Development</a></td>
                         <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">Jose
                             Annunziato
