--- a/src/main/webapp/course-list/course-list.template.client.html
+++ b/src/main/webapp/course-list/course-list.template.client.html
@@ -101,7 +101,7 @@
                         <th scope="row" class="align-middle wbdv-row wbdv-icon"><i
                                 class="fas fa-book"></i></th>
                         <td class="align-middle wbdv-row wbdv-title"><a
-                                href="http://localhost:8080/course-editor/course-editor.template.client.html">CS
+                                href="/course-editor/course-editor.template.client.html">CS
                             2010 - Programming Design
                             Paradigms</a>
                         </td>
@@ -119,7 +119,7 @@
                         <th scope="row" class="align-middle wbdv-row wbdv-icon"><i
                                 class="fas fa-book"></i></th>
                         <td class="align-middle wbdv-row wbdv-title"><a
-                                href="http://localhost:8080/course-editor/course-editor.template.client.html">CS
+                                href="/course-editor/course-editor.template.client.html">CS
                             6200 - Information
                             Retrieval
                         </a></td>
@@ -137,7 +137,7 @@
                         <th scope="row" class="align-middle wbdv-row wbdv-icon"><i
                                 class="fas fa-book"></i></th>
                         <td class="align-middle wbdv-row wbdv-title"><a
-                                href="http://localhost:8080/course-editor/course-editor.template.client.html">CS
+                                href="/course-editor/course-editor.template.client.html">CS
                             5800 - Algorithms</a></td>
                         <td class="align-middle d-none d-md-table-cell wbdv-row wbdv-owner">John
                             Park
