removed navbar padding in course-list

--- a/src/main/webapp/course-list/course-list.template.client.html
+++ b/src/main/webapp/course-list/course-list.template.client.html
@@ -27,13 +27,13 @@
     </div>
     <ul class="nav navbar-nav">
 
-        <div class="form-inline my-2 my-lg-0">
+        <div class="form-inline">
             <li>
                 <input class=" form-control mr-sm-2 wbdv-field wbdv-new-course" type="text"
                        placeholder="New Course Title">
             </li>
             <li>
-                <button type="button" class="btn my-2 my-sm-0 wbdv-button wbdv-add-course"><i
+                <button type="button" class="btn wbdv-button wbdv-add-course"><i
                         class="fa fa-plus-circle fa-lg text-light"></i></button>
             </li>
         </div>
