Added active class in sidebar of course editor

--- a/src/main/webapp/course-editor/course-editor.template.client.html
+++ b/src/main/webapp/course-editor/course-editor.template.client.html
@@ -62,7 +62,7 @@
         <div class="col-sm-4 col-md-3 mt-3 wbdv-nav-col h-100 ">
             <ul class="nav nav-pills flex-column wbdv-module-list">
                 <li class="nav-item wbdv-module-item active">
-                    <a class="nav-link wbdv-module-item-title" href="#">Module 1</a>
+                    <a class="nav-link active wbdv-module-item-title" href="#">Module 1</a>
                     <span class="btn pt-1 mr-3 float-right wbdv-module-item-delete-btn"><i
                             class="fas fa-trash ml-2"></i></span>
                 </li>
