--- a/src/main/webapp/course-editor/course-editor.template.client.html
+++ b/src/main/webapp/course-editor/course-editor.template.client.html
@@ -91,7 +91,7 @@
             </ul>
         </div>
         <div class="col-sm-8 mt-sm-3 col-md-9">
-            <ul class="nav nav-pills wbdv-topic-pill-list">
+            <ul class="nav nav-tabs wbdv-topic-pill-list">
                 <li class="nav-item">
                     <a class="nav-link wbdv-topic-pill" href="#">Topic 1</a>
                 </li>
@@ -104,8 +104,11 @@
                 <li class="nav-item">
                     <a class="nav-link wbdv-topic-pill" href="#">Topic 4</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link wbdv-topic-add-btn" href="#"><i class="fas fa-plus-circle"></i></a>
+                </li>
             </ul>
-            <div class="row ">
+            <div class="row mt-2">
                 <div class="col justify-content-end d-flex">
                     <div class="form-inline">
                         <div class="custom-control custom-switch">
@@ -121,7 +124,6 @@
                 </div>
             </div>
             <div class="mt-1 border rounded">
-
                 <div class="row mx-1 my-2">
                     <div class="col ">
                         <h5 class="wbdv-widget-header mt-2 align-center">Heading Widget</h5>
