added button colors

--- a/src/main/webapp/user-admin/user-admin.template.client.html
+++ b/src/main/webapp/user-admin/user-admin.template.client.html
@@ -47,11 +47,11 @@
                         </td>
                         <td><span
                                 class="float-right wbdv-row">
-                            <button class="btn px-2 wbdv-create"><i class="fa fa-plus"></i></button>
+                            <button class="btn px-2 wbdv-create text-success"><i class="fa fa-plus"></i></button>
                             <button class="btn px-2 wbdv-update wbdv-hidden"><i
-                                    class="fa fa-check"></i></button>
+                                    class="fa fa-check text-primary"></i></button>
                             <button class="btn px-2 wbdv-search"><i
-                                    class="fa fa-search"></i></button>
+                                    class="fa fa-search "></i></button>
                     </span></td>
                     </tr>
                     </thead>
@@ -65,9 +65,9 @@
                         <td class="wbdv-role align-middle">FACULTY</td>
                         <td class="wbdv-actions align-middle">
                             <span class="float-right wbdv-row">
-                              <button class="btn px-2 wbdv-remove" id="wbdv-remove"><i class="fa fa-trash"></i></button>
+                              <button class="btn px-2 wbdv-remove" id="wbdv-remove"><i class="fa fa-trash text-danger"></i></button>
                               <button class="btn px-2 wbdv-edit" id="wbdv-edit"><i
-                                      class="fa fa-edit"></i></button>
+                                      class="fa fa-edit text-primary"></i></button>
                             </span>
                         </td>
                     </tr>
